k8s/guardians/kube-system/traefik/traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.hannahs.family
    metallb.universe.tf/allow-shared-ip: guardians
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    <<: *labels

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  ports:
  - name: api
    port: 8080
    targetPort: api
  selector:
    <<: *labels

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  annotations:
    fluxcd.io/tag.traefik: semver:~2
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      serviceAccountName: traefik
      containers:
      - name: traefik
        image: traefik:v2.0.0
        args:
        - --configFile=/config/traefik.yml
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: api
          containerPort: 8080
        livenessProbe: &probe
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          <<: *probe
        volumeMounts:
        - name: acme
          mountPath: /acme
        - name: tls
          mountPath: /tls
          readOnly: true
        - name: config
          mountPath: /config
          readOnly: true
      volumes:
      - name: acme
        persistentVolumeClaim:
          claimName: traefik-acme-store
      - name: tls
        secret:
          secretName: traefik-default-cert
          defaultMode: 0400
      - name: config
        configMap:
          name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  entrypoints:
  - http
  routes:
  - match: Host(`traefik.hannahs.family`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: default
    services:
    - name: traefik-api
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-https
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  entrypoints:
  - https
  routes:
  - match: Host(`traefik.hannahs.family`)
    kind: Rule
    services:
    - name: traefik-api
      port: 8080
  tls:
    certResolver: default
